# rszurro

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  README.md  config.json  config.yaml
.github/workflows/: build.yml
debian/: rszurro.service
debian/scripts/: postinst  postrm  prerm
src/: cache_manager.rs  lib.rs  lm_sensors.rs  main.rs  modbus_rtu.rs
src/endpoints/: homeassistant.rs  mod.rs  mqtt.rs  telegram.rs
src/monitors/: gpio.rs  lm_sensors.rs  mod.rs  modbus_rtu.rs  sysinfo.rs
src/watchers/: gpio.rs  icmp.rs  lm_sensors.rs  mod.rs  modbus_rtu.rs  sysinfo.rs
