[package]
name = "rszurro"
authors = ["Giuseppe Corti <giuseppe.corti@protonmail.com>"]
license = "MIT"
version = "0.4.1"
edition = "2021"

[package.metadata.deb]
depends = "$auto, systemd"
extended-description = "multi-purpose, IoT focused daemon for multi-source sensor data integration and distribution across endpoints."
section = "admin"
priority = "optional"
assets = [
    ["target/release/rszurro", "/usr/bin/rszurro", "755"],
    ["debian/rszurro.service", "/lib/systemd/system/rszurro.service", "644"],
    ["config.yaml", "/etc/rszurro/config.yaml", "644"],
]
maintainer-scripts = "debian/scripts"

[dependencies]
tokio = { version = "1.43", features = ["rt", "rt-multi-thread", "macros", "time", "fs", "sync"] }
tokio-modbus = { version = "0.16", default-features = false, features = ["rtu"], optional = true }
tokio-serial = { version = "5.4", optional = true }
tokio-gpiod = { version = "0.3", optional = true }
tokio-icmp-echo = { version = "0.4", optional = true }
futures = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"], optional = true }
lm-sensors = { version = "0.3", optional = true }
rumqttc = { version = "0.24", optional = true }

[features]
default = ["modbus-rtu", "sysinfo", "lmsensors", "gpio", "homeassistant", "icmp", "mqtt", "telegram"]
modbus-rtu = ["dep:tokio-modbus","dep:tokio-serial"]
sysinfo = []
lmsensors = ["dep:lm-sensors"]
gpio = ["dep:tokio-gpiod"]
homeassistant = ["dep:reqwest"]
telegram = ["dep:reqwest"]
icmp = ["dep:tokio-icmp-echo"]
mqtt = ["dep:rumqttc"]
